Implement hotplugging on Xlib

Summary:
Register for events using Xlib and read them using Xcb.
This is a mixture of the method used in
qtbase/src/plugins/platforms/xcb/qxcbconnection_xi2.cpp
and plasma-desktop's ca7618dd6173db8a8f0e36d91a38a1d4ac7d0706

BUG: 361743

Test Plan:
Restarted kded after make install, plugging and unplugging
causes notifications.

Reviewers: valeriymalov

Reviewed By: valeriymalov

Subscribers: valeriymalov

Differential Revision: https://phabricator.kde.org/D9576